loopfor.LoopFor.scala.error
Compilation error:
LoopFor:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var b:Int
    ^LoopFor:3: error: local variables must be initialized
var b:Int
    ^LoopFor:4: error: value to is not a member of Boolean
for(isOverBaggle()<-false to true){
                          ^LoopFor:4: error: not found: value isOverBaggle
for(isOverBaggle()<-false to true){
    ^LoopFor:4: error: not found: value isOverBaggle
for(isOverBaggle()<-false to true){
    ^